[gd_scene load_steps=5 format=3 uid="uid://d1h6fhfqct07b"]

[ext_resource type="Script" uid="uid://ugdchx6xlq4s" path="res://Componentes/Inimigos_Area2/Turret/tiro_turret.gd" id="1_x8s5n"]
[ext_resource type="PackedScene" uid="uid://dj3v4y7fqqc74" path="res://Componentes/Explosao_Granada/ExplosaoGranada.tscn" id="2_it7js"]
[ext_resource type="SpriteFrames" uid="uid://cj8edhspj8mp3" path="res://Componentes/Inimigos_Area2/Infantaria_Bazooka/tiro_bazuca.tres" id="3_1np4d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y6wbq"]

[node name="TiroBazooka" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_x8s5n")
explosao = ExtResource("2_it7js")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_1np4d")
animation = &"turret"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_y6wbq")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="timer_queue_free" type="Timer" parent="."]
wait_time = 1.35
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="timer_queue_free" to="." method="_on_timer_queue_free_timeout"]
